# bifurcation

PlacentArtAnalysis/: CMakeLists.txt
PlacentArtAnalysis/BifurcationsAnalysis/: 2centerline.py  BifurcationsAnalysis.py  CMakeLists.txt
PlacentArtAnalysis/BifurcationsAnalysis/Resources/UI/: BifurcationsAnalysis.ui
PlacentArtAnalysis/BifurcationsAnalysis/centerlineExtractor/: BranchExtractor.py
PlacentArtAnalysis/BifurcationsAnalysis/ransac_slicer/: __init__.py  branch_tree.py  color_palettes.py  cylinder.py  cylinder_ransac.py  dependencies_checker.py  graph_branches.py  helper.py  jit_compiled_functions.py  popup_utils.py  ransac.py  region_growing_seeds.py  segment.py  volume.py
PlacentArtAnalysis/BifurcationsAnalysis/ransac_slicer/__pycache__/: jit_compiled_functions.numba_close-335.py39.1.nbc  jit_compiled_functions.numba_close-335.py39.nbi  jit_compiled_functions.numba_cross-81.py39.1.nbc  jit_compiled_functions.numba_cross-81.py39.nbi  jit_compiled_functions.numba_distance-354.py39.1.nbc  jit_compiled_functions.numba_distance-354.py39.nbi  jit_compiled_functions.numba_filter_points-188.py39.1.nbc  jit_compiled_functions.numba_filter_points-188.py39.nbi  jit_compiled_functions.numba_fit_3_points_cylinder-103.py39.1.nbc  jit_compiled_functions.numba_fit_3_points_cylinder-103.py39.nbi  jit_compiled_functions.numba_fit_cylinder_ransac-211.py39.1.nbc  jit_compiled_functions.numba_fit_cylinder_ransac-211.py39.nbi  jit_compiled_functions.numba_mark_selected_inliers-162.py39.1.nbc  jit_compiled_functions.numba_mark_selected_inliers-162.py39.nbi  (+2 more)
